# balls-physics

./: CMakeLists.txt  README.md
cmake/: FindGTest.cmake
include/: BaseRenderer.h  CollisionBox.h  Exceptions.h  GraphicSystem.h  InputAdapter.h  InputCLI.h  PhysicSystem.h  Position.h  Renderer.h  RendererWrapper.h  SDLRenderer.h  SDLShapeTexture.h  SDLShapes.h  Shapes.h  Texture.h  Vector2f.h  Velocity.h  Weight.h
include/ecs/: EntityManager.h  SparseSet.h
src/: CMakeLists.txt  GraphicSystem.cpp  InputAdapter.cpp  InputCLI.cpp  PhysicSystem.cpp  SDLRenderer.cpp  Vector2f.cpp  main.cpp
tests/: CMakeLists.txt  Vector2f.cpp
